force-app/main/default/objects/Match__c/Match__c.object-meta.xml
<CustomObject>
    <description>Represents a match/game event across all sports</description>
    <label>Match</label>
    <nameField>
        <displayFormat>MATCH-{00000}</displayFormat>
        <label>Match Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>