force-app/main/default/objects/Match__c/fields/Attendance__c.field-meta.xml
<CustomField>
    <fullName>Attendance__c</fullName>
    <description>Number of spectators at the fixture</description>
    <inlineHelpText>Total attendance at this match/game</inlineHelpText>
    <label>Attendance</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>