force-app/main/default/objects/Match__c/fields/Away_Score_Final__c.field-meta.xml
<CustomField>
    <fullName>Away_Score_Final__c</fullName>
    <label>Away Score Final</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>