force-app/main/default/objects/Match__c/fields/Away_Sub_Score__c.field-meta.xml
<CustomField>
    <fullName>Away_Sub_Score__c</fullName>
    <description>Secondary score component for away team. AFL behinds, cricket wickets, tennis games, etc.</description>
    <inlineHelpText>AFL: Behinds | Cricket: Wickets | Tennis: Games</inlineHelpText>
    <label>Away Sub Score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>