force-app/main/default/objects/Match__c/fields/Away_Team__c.field-meta.xml
<CustomField>
    <fullName>Away_Team__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Away Team</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Away Matches</relationshipLabel>
    <relationshipName>Away_Matches_New</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>