force-app/main/default/objects/Match__c/fields/Broadcast_URL__c.field-meta.xml
<CustomField>
    <fullName>Broadcast_URL__c</fullName>
    <description>URL to watch the live broadcast or stream of the fixture</description>
    <inlineHelpText>Link to watch this match live or on-demand</inlineHelpText>
    <label>Broadcast URL</label>
    <type>Url</type>
</CustomField>