force-app/main/default/objects/Match__c/fields/Display_Score__c.field-meta.xml
<CustomField>
    <fullName>Display_Score__c</fullName>
    <description>Formatted display score combining main and sub scores. Adapts to sport type.</description>
    <formula>IF(
    AND(ISBLANK(Home_Sub_Score__c), ISBLANK(Away_Sub_Score__c)),
    /* Standard format: 3-1 */
    TEXT(Home_Score_Final__c) &amp; " - " &amp; TEXT(Away_Score_Final__c),
    /* AFL format: 10.8.68 - 9.12.66 or Cricket: 245/6 - 198/10 */
    TEXT(Home_Score_Final__c) &amp; "." &amp; TEXT(Home_Sub_Score__c) &amp; " - " &amp; TEXT(Away_Score_Final__c) &amp; "." &amp; TEXT(Away_Sub_Score__c)
)</formula>
    <inlineHelpText>Auto-formatted score display based on sport type</inlineHelpText>
    <label>Display Score</label>
    <type>Text</type>
</CustomField>