force-app/main/default/objects/Match__c/fields/Home_Team__c.field-meta.xml
<CustomField>
    <fullName>Home_Team__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Home Team</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Home Matches</relationshipLabel>
    <relationshipName>Home_Matches_New</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>