force-app/main/default/objects/Match__c/fields/Match_Level__c.field-meta.xml
<CustomField>
    <fullName>Match_Level__c</fullName>
    <label>Match Level</label>
    <description>Classification level for the match - Professional, Semi-Professional, or Amateur</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Semi-Professional</fullName>
            </value>
            <value>
                <fullName>Amateur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>