force-app/main/default/objects/Match__c/fields/Match_Stats_JSON__c.field-meta.xml
<CustomField>
    <fullName>Match_Stats_JSON__c</fullName>
    <label>Match Stats JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>