force-app/main/default/objects/Match__c/fields/Neutral_Venue__c.field-meta.xml
<CustomField>
    <fullName>Neutral_Venue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Match played at neutral venue?</description>
    <label>Neutral Venue</label>
    <type>Checkbox</type>
</CustomField>